<resources>
    <string name="app_name">finalProject</string>
    <string name="calender">Calender</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="room">Rooms</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>
    <string name="type">Type a message...</string>
    <string name="reserveRoomTitel">Reserve The Room</string>
    <string name="reserveRoomDescribtion">Whould you like to reserve the room?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="roomReservedBy">Room reserved by</string>
    <string name="freeRoomTitel">Release the room</string>
    <string name="freeRoomDescribtion">Whould you like to release the room?</string>
    <string name="addRoomTitle">Add Room</string>
    <string name="roomNumber">Room number</string>
    <string name="roomFloor">Room Floor</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="deleteDialogTitel">Delete Room</string>
    <string name="deleteDialogDescribation">Are you sure you want to delete this room?</string>
    <string name="roomRemoved">Room removed successfully</string>
    <string name="number">Number</string>
    <string name="floor">Floor</string>
    <string name="undo">Undo</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="resetPassword">Reset Password</string>
    <string name="send">Send</string>
    <string name="pleaseEmail">Please fill you email:</string>
    <string name="resetDescribtion">Reset password link will be send to your email.</string>
    <string name="emailRequired">Email is required!</string>
    <string name="resetSent">Reset link sent to your email</string>
    <string name="passwordReqired">Password is reqired!</string>
    <string name="logout">Logout</string>
    <string name="askingauthorization">Give authorization to this user ?</string>
    <string name="userAdded">User added to the system successfully</string>
    <string name="emptyMessagesError">Cannot send empty message</string>
    <string name="addUser">Add user</string>
    <string name="addPhoto">Add profile picture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="profileUpdate">Profile picture update successfully</string>
    <string name="nameFirstReqierd">First name is reqierd</string>
    <string name="nameLastReqierd">Last name is reqierd</string>
    <string name="passwordLenght">Password must be at least 6 digits</string>
    <string name="eventLocation">Location</string>
    <string name="eventTitle">Title</string>
    <string name="time">Time</string>
    <string name="addMeeting">Add Meeting</string>
    <string name="roommeetingempty">You did not select a room number</string>
    <string name="titleEmpy">Please enter meeting title</string>
    <string name="timeEmpty">You have not set a time for the meeting</string>
    <string name="meetingAddedSuccessfully">Meeting added successfully</string>
    <string name="online">Online meeting</string>
</resources>