<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:id="@+id/courseFragLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:divider="@android:color/transparent"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Bold19White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_pop_up"
                android:gravity="center"
                android:paddingVertical="23dp"
                tools:text="@string/addUser" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputFirstName"
                    style="@style/Reg17Black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:hint="@string/firstName"
                    android:inputType="text"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp"/>

                <EditText
                    android:id="@+id/inputLastName"
                    android:hint="@string/lastName"
                    android:inputType="text"
                    style="@style/Reg17Black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Reg17Black"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="numberPassword"
                style="@style/Reg17Black"
                android:layout_margin="10dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/roleCheckbox"
                android:padding="16dp"
                android:layout_margin="10dp"
                android:text="@string/askingauthorization"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addRoomProgressBar"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom|center"
                android:layout_margin="15dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/addRoomNegativeBtn"
                    android:background="@drawable/round_border"
                    app:backgroundTint="@null"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:id="@+id/addRoomNaturalBtn"
                    android:background="@drawable/round_bg"
                    app:backgroundTint="@null"/>
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="23dp"
            android:background="@null"
            android:id="@+id/exitBtnAddRoom"
            android:src="@drawable/ic_close_black" />
    </androidx.cardview.widget.CardView>
</FrameLayout>
