<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:id="@+id/courseFragLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:divider="@android:color/transparent"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Bold19White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_pop_up"
                android:gravity="center"
                android:paddingVertical="23dp"
                tools:text="@string/resetPassword" />

            <TextView
                style="@style/Reg17Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/resetDescribtion" />

            <TextView
                style="@style/Reg17Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/pleaseEmail" />

            <EditText
                android:id="@+id/mailToReset"
                style="@style/Reg17Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/email" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resetPasswordProgressBar"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom|center"
                android:layout_margin="15dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send"
                    android:id="@+id/resetRoomNaturalBtn"
                    android:background="@drawable/btn_rectangle_primary"
                    app:backgroundTint="@null"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:id="@+id/resetRoomNegativeBtn"
                    android:background="@drawable/btn_rectangle_primary"
                    app:backgroundTint="@null"/>
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/exitResetDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="23dp"
            android:background="@null"
            android:src="@drawable/ic_close_black" />
    </androidx.cardview.widget.CardView>
</FrameLayout>
