<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null">

    <androidx.cardview.widget.CardView
        android:id="@+id/courseFragLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:divider="@android:color/transparent"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Bold19White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_pop_up"
                android:gravity="center"
                android:paddingVertical="23dp"
                tools:text="@string/addMeeting" />

            <EditText
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eventTitle"
                style="@style/Reg17Black"
                android:inputType="text"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/evenLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eventLocation"
                android:gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/ic_down"
                style="@style/Reg17Black"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/eventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="18/10/2022"
                android:gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/ic_down"
                style="@style/Reg17Black"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/eventTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_down"
                android:gravity="start"
                android:background="@color/transparent"
                android:hint="@string/time"
                style="@style/Reg17Black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom|center"
                android:layout_margin="15dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/addMeetingNegativeBtn"
                    android:background="@drawable/round_border"
                    app:backgroundTint="@null"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:id="@+id/addMeetingNaturalBtn"
                    android:background="@drawable/round_bg"
                    app:backgroundTint="@null"/>
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="23dp"
            android:background="@null"
            android:id="@+id/exitBtnAddMeeting"
            android:src="@drawable/ic_close_black" />
    </androidx.cardview.widget.CardView>
</FrameLayout>
